# proyecto_inmobiliario_sevilla

./: app.py  packages.txt  pyproject.toml  requirements.txt
models/: modelo_pytorch.pth
notebooks/: 02_entrenamiento_modelo.ipynb
src/proyecto_inmobiliario_sevilla.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
