[project]
name = "proyecto-inmobiliario-sevilla"
version = "0.1.0"
description = "Tasador inteligente con ML, Deep Learning y Orquestación"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "streamlit",
    "pandas",
    "numpy",
    "scikit-learn",
    "joblib",
    "plotly",
    "matplotlib",
    "seaborn",
    "torch",
    "dask",
    "rpy2",
]

[project.optional-dependencies]
dev = [
    "dask",
    "distributed",
    "dagster",
    "dagster-webserver",
    "jupyter",
]